load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gen_self_signed_cert_lib",
    srcs = ["main.go"],
    importpath = "github.com/dolthub/ld/go/cmd/doltlab/server_client_header_tester/gen_self_signed_cert",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gen_self_signed_cert",
    embed = [":gen_self_signed_cert_lib"],
    visibility = ["//visibility:public"],
)
